--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
     <link rel="stylesheet" href="stylesheet.css">
     <title>Tjirrh</title>
+    <link rel="icon" href="ikon.png">
 </head>
 
 <body>
